src/BRepAlgo/BRepAlgo_DSAccess.cxx
@@ -443,12 +443,12 @@ const TopTools_ListOfShape& BRepAlgo_DSAccess::SectionVertex
 (const TopoDS_Shape& F,
  const TopoDS_Shape& E)
 {
-  TopTools_ListOfShape Result;
-  Result.Clear();
-  if(F.ShapeType() != TopAbs_FACE) return myEmptyListOfShape;
-  if(E.ShapeType() != TopAbs_EDGE) return myEmptyListOfShape;
+  myListOfVertex.Clear();
+  if(F.ShapeType() != TopAbs_FACE || E.ShapeType() != TopAbs_EDGE)
+    return myListOfVertex;
   Standard_Integer iF = myHDS->Shape(F), iE = myHDS->Shape(E);
-  if((iF == 0) || (iE == 0)) return myEmptyListOfShape;
+  if((iF == 0) || (iE == 0))
+    return myListOfVertex;
 
   const TopOpeBRepDS_DataStructure& DS = myHDS->DS();
   const TopOpeBRepDS_ListOfInterference& LI = 
@@ -464,13 +464,12 @@ const TopTools_ListOfShape& BRepAlgo_DSAccess::SectionVertex
       goodKind  = I->GeometryType();
       goodIndex = I->Geometry();
       if(goodKind == TopOpeBRepDS_VERTEX)
-	Result.Append(myHDS->Shape(goodIndex));
+	myListOfVertex.Append(myHDS->Shape(goodIndex));
       else 
 	if (goodKind == TopOpeBRepDS_POINT)
-	  Result.Append(myHB->NewVertex(goodIndex));
+	  myListOfVertex.Append(myHB->NewVertex(goodIndex));
     }
   }
-  myListOfVertex = Result;
   return myListOfVertex;
 }
 
